Fixed logo image layout bug from guilium.

--- a/webapp/static/src/css/layout.css
+++ b/webapp/static/src/css/layout.css
@@ -157,6 +157,11 @@ header
     position: absolute;
 }
 
+.logo-wrap .logo-box
+{
+    display: inline-block;
+}
+
 .sf
 {
     padding-top: 8px;
